# swiss-kyle

./: .env.development  .gitignore  CLAUDE.md  Cargo.toml  README.md  WIKI_USAGE.md  WINDOWS-DEV.md  fix-appimage-typst.ts  mark-sidecar-version.ts  package.json  prepare-sidecars.ts  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: consumer.rs  convert_document.rs  convert_to_pdf.rs  cut_video.rs  error.rs  job.rs  main.rs  merge_pdfs.rs
docs/: DESIGN.md
e2e/: package-lock.json  package.json  repeat.ts  tsconfig.json  wdio.conf.ts
e2e/fixtures/: unsupported.txt
e2e/specs/: cut-video.spec.ts  doc-converter.spec.ts  merge-pdfs.spec.ts  navigation.spec.ts  sidecars.spec.ts  smoke.spec.ts
e2e/support/: click.ts  drag-drop.ts  navigate.ts  selectors.ts
scripts/: mark-sidecar-version.ts  prepare-sidecars.sh  prepare-sidecars.ts  sidecar-downloads.ts  sidecar-versions.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  job_log.rs  lib.rs  video_server.rs
swiss-kyle-ui/: index.html  package.json
swiss-kyle-ui/src/: App.tsx
ui/: package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
wiki/: index.md  log.md  usage.md
wiki/architecture/: system-overview.md
wiki/components/: cli-publisher.md  e2e-tests.md  frontend.md  http-api.md  job-types.md  publisher.md  tauri-app.md  video-server.md  worker.md
wiki/concepts/: jetstream-pull-consumer.md
wiki/decisions/: adr-001-local-only.md  adr-002-keep-nats-for-durability.md  adr-003-embedded-surrealdb.md  adr-004-private-sidecar-resources.md
wiki/dependencies/: async-nats.md  axum.md
wiki/issues/: api-rs-obsolescence.md  e2e-file-drop-listener-race.md  e2e-linux-native-click-unreliable.md  e2e-sidecar-leak-across-specs.md  e2e-sidecars-linux-close-and-worker-match.md  (+8 more)
(+20 files in other folders)
