[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
shared = { version = "0.1.0", path = "../crates/shared" }
tauri-plugin-dialog = { version = "2.7.1", default-features = false, features = ["xdg-portal"] }
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.3", features = ["net", "rt", "time"] }
futures = "0.3.32"
percent-encoding = "2.3.2"
axum = "0.8.4"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
surrealdb = { version = "3.2.0", features = ["kv-surrealkv"] }
async-nats = "0.49.1"
time = { version = "=0.3.36", features = ["formatting", "parsing"] }
