[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.49.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "=0.3.36", features = ["serde-well-known"] }
tokio = { version = "1.52.3", features = ["full"] }
ulid = "1.2.1"
