[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[dependencies]
async-nats = "0.49.1"
dirs = "6.0.0"
futures = "0.3.32"
serde_json = "1.0.150"
shared = { version = "0.1.0", path = "../shared" }
time = { version = "=0.3.36", features = ["serde-well-known"] }
tokio = { version = "1.52.3", features = ["full"] }
